--- a/index.html
+++ b/index.html
@@ -859,8 +859,9 @@
         <p>障がい児サポート</p>
       </div>
       <div class="partner-logo">
-        <h4>ライフデザインラボ株式会社</h4>
-        <p>訪問看護</p>
+        <a href="https://ldl-965.com/" target="_blank" style="text-decoration: none;">
+          <img src="images/kurokologo.jpg" alt="黒子ケアラボ" style="width: 200px; height: 80px; object-fit: contain; border-radius: 10px;">
+        </a>
       </div>
     </div>
     </div>
